@@ -168,6 +168,24 @@
 		    android:layout_height="wrap_content">
 
 		    <TextView
+			android:id="@+id/trans_da"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"
+			android:text="Danske"/>
+		    <TextView
+			android:id="@+id/trans_credit_da"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Henrik Skov Midtiby"/>
+		</TableRow>
+
+		<TableRow
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content">
+
+		    <TextView
 			android:id="@+id/trans_de"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
